--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: "CIT281 Project 6"
+description: "In this project we really dug into the concept of classes and inheritance using classes to represent shapes with varying amounts of sides"
